# python-poetry-template

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
