[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "Python project template using Poetry and .devcontainer"
authors = ["Atahan Yorgancı <atahanyorganci@hotmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/atahanyorganci/python-poetry-template.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py38"]
include = "myproject"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90

[tool.pylint.MESSAGE_CONTROL]
disable = """
    missing-class-docstring,
    missing-module-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-few-public-methods,
    invalid-name,
"""
enable = "useless-suppression"

[tool.pylint.REPORTS]
reports="no"

[tool.pylint.FORMAT]
max-line-length="90"
